캐스팅 알람 화면 추가

--- a/Andorid/CommonModule/src/main/res/values/color.xml
+++ b/Andorid/CommonModule/src/main/res/values/color.xml
@@ -65,6 +65,7 @@
     <color name="color_d9d9d9">#d9d9d9</color>
     <color name="color_d9d9d9_50">#90d9d9d9</color>
     <color name="color_999999">#999999</color>
+    <color name="color_37516C">#37516C</color>
     <color name="color_80999999">#80999999</color>
     <color name="color_fd454f">#fd454f</color>
     <color name="color_82bf2b">#82bf2b</color>
