--- a/Andorid/CommonModule/src/main/res/values/color.xml
+++ b/Andorid/CommonModule/src/main/res/values/color.xml
@@ -61,6 +61,7 @@
     <color name="color_ffffff">#ffffff</color>
     <color name="color_eaeaea">#eaeaea</color>
     <color name="color_505050">#505050</color>
+    <color name="color_505050_80">#A0505050</color>
     <color name="color_d6d6d6">#d6d6d6</color>
     <color name="color_d9d9d9">#d9d9d9</color>
     <color name="color_d9d9d9_50">#90d9d9d9</color>
