--- a/Andorid/app/src/main/res/layout/view_item_cast_card_wide.xml
+++ b/Andorid/app/src/main/res/layout/view_item_cast_card_wide.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/dp200"
+    android:layout_height="@dimen/dp220"
     android:orientation="vertical"
     android:layout_marginLeft="@dimen/dp15"
     android:layout_marginRight="@dimen/dp15"
@@ -17,16 +17,33 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp200" />
 
-    <TextView
-        android:id="@+id/castCardTitle"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:layout_marginBottom="@dimen/dp15"
         android:layout_marginLeft="@dimen/dp10"
         android:layout_marginRight="@dimen/dp10"
-        android:text="비트코인의 7월25일의 자정가격은 얼마일까요 ?"
-        android:textColor="@color/color_white"
-        android:textSize="@dimen/dp40" />
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/castCardTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textColor="@color/color_white"
+            android:textSize="@dimen/dp40" />
+
+        <TextView
+            android:id="@+id/castCardDescription"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp10"
+            android:text=""
+            android:visibility="gone"
+            android:textColor="@color/color_white"
+            android:textSize="@dimen/dp14" />
+
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
