--- a/Andorid/app/src/main/res/layout/view_item_cast_card_wide.xml
+++ b/Andorid/app/src/main/res/layout/view_item_cast_card_wide.xml
@@ -19,6 +19,70 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="@dimen/dp30"
+        android:gravity="center_vertical"
+        android:layout_marginTop="@dimen/dp10"
+        android:paddingLeft="@dimen/dp10"
+        android:paddingRight="@dimen/dp10"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/castTag1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/dp12"
+            android:text="비트코인"
+            android:paddingLeft="@dimen/dp5"
+            android:paddingRight="@dimen/dp5"
+            android:paddingTop="@dimen/dp2"
+            android:paddingBottom="@dimen/dp2"
+            android:background="@drawable/shape_main_color_round5"
+            android:textColor="@color/color_white"/>
+
+        <TextView
+            android:id="@+id/castTag2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/dp12"
+            android:text="1,0000캡"
+            android:layout_marginLeft="@dimen/dp10"
+            android:paddingLeft="@dimen/dp5"
+            android:paddingRight="@dimen/dp5"
+            android:paddingTop="@dimen/dp2"
+            android:paddingBottom="@dimen/dp2"
+            android:background="@drawable/shape_main_color_round5"
+            android:textColor="@color/color_white"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:gravity="center_vertical|right">
+
+            <TextView
+                android:id="@+id/castTopText1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/dp11"
+                android:text="150명 참여중"
+                android:layout_marginRight="@dimen/dp10"
+                android:textColor="@color/color_white"/>
+
+            <TextView
+                android:id="@+id/castTopText2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/dp11"
+                android:text="종료"
+                android:layout_marginRight="@dimen/dp10"
+                android:textColor="@color/color_white"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:layout_marginBottom="@dimen/dp15"
@@ -32,14 +96,14 @@
             android:layout_height="wrap_content"
             android:text=""
             android:textColor="@color/color_white"
-            android:textSize="@dimen/dp40" />
+            android:textSize="@dimen/dp24" />
 
         <TextView
             android:id="@+id/castCardDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp10"
-            android:text=""
+            android:text="디스크립션 가이드 입니다 .디스크립션 가이드 입니다 .디스크립션 가이드 입니다 .디스크립션 가이드 입니다 .디스크립션 가이드 입니다 .디스크립션 가이드 입니다 .디스크립션 가이드 입니다 ."
             android:visibility="gone"
             android:textColor="@color/color_white"
             android:textSize="@dimen/dp14" />
