--- a/Andorid/app/src/main/res/layout/view_item_timeline.xml
+++ b/Andorid/app/src/main/res/layout/view_item_timeline.xml
@@ -50,7 +50,7 @@
                         android:gravity="center_vertical"
                         android:maxLength="25"
                         android:maxLines="1"
-                        android:text="조감독"
+                        android:text=""
                         android:textColor="@color/color_black"
                         android:textSize="@dimen/dp14" />
 
@@ -63,7 +63,7 @@
                         android:layout_marginLeft="@dimen/dp10"
                         android:maxLength="25"
                         android:maxLines="1"
-                        android:text="Mr cho"
+                        android:text=""
                         android:textColor="@color/color_666666"
                         android:textSize="@dimen/dp12" />
 
