--- a/Andorid/app/src/main/res/layout/view_item_timeline_reply.xml
+++ b/Andorid/app/src/main/res/layout/view_item_timeline_reply.xml
@@ -51,7 +51,7 @@
                         android:gravity="center_vertical"
                         android:maxLength="25"
                         android:maxLines="1"
-                        android:text="조감독"
+                        android:text=""
                         android:textColor="@color/color_black"
                         android:textSize="@dimen/dp14" />
 
@@ -64,7 +64,7 @@
                         android:gravity="center_vertical"
                         android:maxLength="25"
                         android:maxLines="1"
-                        android:text="Mr cho"
+                        android:text=""
                         android:textColor="@color/color_666666"
                         android:textSize="@dimen/dp12" />
 
@@ -76,7 +76,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="right|top"
                     android:gravity="center_vertical"
-                    android:text="1시간전"
+                    android:text=""
                     android:textColor="@color/color_adadad"
                     android:textSize="@dimen/dp12" />
 
