--- a/Andorid/app/src/main/res/layout/activity_cast_chart.xml
+++ b/Andorid/app/src/main/res/layout/activity_cast_chart.xml
@@ -43,6 +43,7 @@
 
             <com.casting.view.CustomTabLayout
                 style="@style/CustomTabLayoutStyle"
+                android:id="@+id/rankingListTab"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="40"
