--- a/Andorid/app/src/main/res/layout/view_item_cast_card_wide.xml
+++ b/Andorid/app/src/main/res/layout/view_item_cast_card_wide.xml
@@ -103,9 +103,39 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp10"
+            android:maxLines="4"
             android:text="디스크립션 가이드 입니다 .디스크립션 가이드 입니다 .디스크립션 가이드 입니다 .디스크립션 가이드 입니다 .디스크립션 가이드 입니다 .디스크립션 가이드 입니다 .디스크립션 가이드 입니다 ."
             android:textColor="@color/color_white"
             android:textSize="@dimen/dp14" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp30"
+            android:layout_gravity="bottom"
+            android:layout_marginRight="@dimen/dp10"
+            android:gravity="center_vertical|right"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/replyThisCast"
+                android:layout_width="@dimen/dp85"
+                android:layout_height="@dimen/dp25"
+                android:textColor="@color/color_white"
+                android:text="타임라인달기"
+                android:textSize="@dimen/dp12"
+                android:background="@drawable/shape_main_color_round5"
+                android:layout_marginRight="@dimen/dp10" />
+
+            <Button
+                android:id="@+id/shareThisCast"
+                android:layout_width="@dimen/dp55"
+                android:layout_height="@dimen/dp25"
+                android:textColor="@color/color_white"
+                android:text="공유하기"
+                android:textSize="@dimen/dp12"
+                android:background="@drawable/shape_main_color_round5"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
