--- a/Andorid/app/src/main/res/layout/view_item_timeline.xml
+++ b/Andorid/app/src/main/res/layout/view_item_timeline.xml
@@ -94,7 +94,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp30"
                 android:gravity="center_vertical|right"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:clipChildren="false">
 
                 <Button
                     android:id="@+id/replyThisTimeLine"
@@ -120,5 +121,23 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/replyThisTimeLineCount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/dp12"
+        android:textColor="@color/color_white"
+        android:layout_marginBottom="@dimen/dp25"
+        android:layout_marginRight="@dimen/dp60"
+        android:text="12"
+        android:visibility="gone"
+        android:gravity="center"
+        android:layout_gravity="bottom|right"
+        android:paddingLeft="@dimen/dp5"
+        android:paddingRight="@dimen/dp5"
+        android:paddingTop="@dimen/dp2"
+        android:paddingBottom="@dimen/dp2"
+        android:background="@drawable/shape_pink_color_round5"/>
 
 </android.support.v7.widget.CardView>
