--- a/Andorid/app/src/main/res/layout/view_item_timeline_reply_insert.xml
+++ b/Andorid/app/src/main/res/layout/view_item_timeline_reply_insert.xml
@@ -56,7 +56,7 @@
                         android:gravity="center_vertical"
                         android:maxLength="25"
                         android:maxLines="1"
-                        android:text="조감독"
+                        android:text=""
                         android:textColor="@color/mainColor0"
                         android:textSize="@dimen/dp14" />
 
