--- a/Andorid/app/src/main/res/layout/view_item_timeline_write.xml
+++ b/Andorid/app/src/main/res/layout/view_item_timeline_write.xml
@@ -55,7 +55,7 @@
                         android:gravity="center_vertical"
                         android:maxLength="25"
                         android:maxLines="1"
-                        android:text="조감독"
+                        android:text=""
                         android:textColor="@color/color_black"
                         android:textSize="@dimen/dp14" />
 
@@ -68,7 +68,7 @@
                         android:gravity="center_vertical"
                         android:maxLength="25"
                         android:maxLines="1"
-                        android:text="Mr cho"
+                        android:text=""
                         android:textColor="@color/color_666666"
                         android:textSize="@dimen/dp12" />
 
