--- a/Andorid/app/src/main/res/layout/view_item_current_casting_status.xml
+++ b/Andorid/app/src/main/res/layout/view_item_current_casting_status.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/dp230"
+    android:layout_height="wrap_content"
     android:layout_marginBottom="@dimen/dp5"
     android:layout_marginLeft="@dimen/dp15"
     android:layout_marginRight="@dimen/dp15"
@@ -25,9 +25,11 @@
         android:textColor="@color/mainColor0" />
 
     <LinearLayout
+        android:id="@+id/castingSelectionList"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp200"
+        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp30"
+        android:layout_marginBottom="@dimen/dp15"
         android:orientation="vertical">
 
         <LinearLayout
@@ -164,7 +166,141 @@
 
         </LinearLayout>
 
-    </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp30"
+            android:orientation="horizontal"
+            android:layout_marginTop="@dimen/dp5"
+            android:weightSum="100">
 
+            <TextView
+                android:id="@+id/castingSelection6"
+                android:layout_width="@dimen/dp90"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:maxLines="1"
+                android:text="한화 이글스"
+                android:textColor="@color/color_666666"
+                android:textSize="@dimen/dp14" />
+
+            <View
+                android:id="@+id/castingSelection6Percent"
+                android:layout_width="@dimen/dp200"
+                android:layout_height="@dimen/dp4"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="@dimen/dp15"
+                android:background="@drawable/shape_main_color_round15" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp30"
+            android:orientation="horizontal"
+            android:layout_marginTop="@dimen/dp5"
+            android:weightSum="100">
+
+            <TextView
+                android:id="@+id/castingSelection7"
+                android:layout_width="@dimen/dp90"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:maxLines="1"
+                android:text="한화 이글스"
+                android:textColor="@color/color_666666"
+                android:textSize="@dimen/dp14" />
+
+            <View
+                android:id="@+id/castingSelection7Percent"
+                android:layout_width="@dimen/dp200"
+                android:layout_height="@dimen/dp4"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="@dimen/dp15"
+                android:background="@drawable/shape_main_color_round15" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp30"
+            android:orientation="horizontal"
+            android:layout_marginTop="@dimen/dp5"
+            android:weightSum="100">
+
+            <TextView
+                android:id="@+id/castingSelection8"
+                android:layout_width="@dimen/dp90"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:maxLines="1"
+                android:text="한화 이글스"
+                android:textColor="@color/color_666666"
+                android:textSize="@dimen/dp14" />
+
+            <View
+                android:id="@+id/castingSelection8Percent"
+                android:layout_width="@dimen/dp200"
+                android:layout_height="@dimen/dp4"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="@dimen/dp15"
+                android:background="@drawable/shape_main_color_round15" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp30"
+            android:orientation="horizontal"
+            android:layout_marginTop="@dimen/dp5"
+            android:weightSum="100">
+
+            <TextView
+                android:id="@+id/castingSelection9"
+                android:layout_width="@dimen/dp90"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:maxLines="1"
+                android:text="한화 이글스"
+                android:textColor="@color/color_666666"
+                android:textSize="@dimen/dp14" />
+
+            <View
+                android:id="@+id/castingSelection9Percent"
+                android:layout_width="@dimen/dp200"
+                android:layout_height="@dimen/dp4"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="@dimen/dp15"
+                android:background="@drawable/shape_main_color_round15" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp30"
+            android:orientation="horizontal"
+            android:layout_marginTop="@dimen/dp5"
+            android:weightSum="100">
+
+            <TextView
+                android:id="@+id/castingSelection10"
+                android:layout_width="@dimen/dp90"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:maxLines="1"
+                android:text="한화 이글스"
+                android:textColor="@color/color_666666"
+                android:textSize="@dimen/dp14" />
+
+            <View
+                android:id="@+id/castingSelection10Percent"
+                android:layout_width="@dimen/dp200"
+                android:layout_height="@dimen/dp4"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="@dimen/dp15"
+                android:background="@drawable/shape_main_color_round15" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
